--- a/index.html
+++ b/index.html
@@ -9,32 +9,32 @@
 <body>
     <div class="instagram-wrapper">
         <div class="instagram-phone">
-            <img src="./img/instagram-celular.png" alt="celular">
+            <img src="./img/celular3.JPG" alt="celular">
         </div>
-        <div class="instagram-continue">
+        <div class="instragram-continue">
             <div class="group">
-                <img src="./img/instagram-logo.png" class="instagram-logo" alt="instagram logo">
+                <img src="./img/instagram-logo1.png" class="instagram-logo" alt="instagram logo">
                 <div class="profile-photo">
-                    <img src="./img/perfil-instagram.jpg" alt="foto de perfil">
+                    <img src="./img/IMG-20190331-WA0005.jpg" alt="foto de perfil">
                 </div>
-                <a href="#" class="instagram-login">Continue como sprucegabriela</a>
+                <a href="#" class="instagram-login">Continue como melzis</a>
                 <a href="#" class="instagram-logout">Remover conta</a>
-            </div>
+            </div>  
             <div class="group">
-                <p class="not-account">Não é sprucegabriela?</p>
+                <p class="not-account">Não é melzis?</p>
                 <p class="not-account">
                     <span class="link-blue">Alternar contas</span>
                     ou
                     <span class="link-blue">Inscreva-se</span>
                 </p>
-            </div>
+            </div> 
             <div class="get-the-app">
                 <p class="get-app">Baixe o aplicativo</p>
                 <div class="download">
                     <a href="#" class="app-download"></a>
-                    <a href="#" class="app-download"></a>
+                    <a href="#" class="app-download"></a>                    
                 </div>
-            </div>
+            </div>             
         </div>
     </div>
 </body>
